--- a/DockerFile/Dockerfile.txt
+++ b/DockerFile/Dockerfile.txt
@@ -1,8 +1,13 @@
-# Tomcat mặc định start tại cổng 8080
-EXPOSE 9999
-FROM tomcat:10.0-jdk22
-RUN rm -rf /C:/Program Files/Apache Software Foundation/Tomcat 10.0/webapps/*
-# Copy file WAR của bạn vào Tomcat
-COPY ./webapps/LearningPro192_chatBot.war C:/Program Files/Apache Software Foundation/Tomcat 10.0/webapps/LearningPro192_chatBot.war
+FROM tomcat:10.1-jdk17
 
-CMD ["catalina.sh", "run"]
+# Xoá ứng dụng mặc định trong thư mục webapps
+RUN rm -rf /usr/local/tomcat/webapps/*
+
+# Copy WAR file (giả sử tên là myapp.war) vào Tomcat
+COPY LearningPro192_chatBot.war /usr/local/tomcat/webapps/
+
+# Mở port 8080
+EXPOSE 8080
+
+# Chạy Tomcat
+CMD ["/usr/local/tomcat/bin/catalina.sh", "run"]
